--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "heroku-postbuild": "ng build",
+    "heroku-postbuild": "ng build — prod",
     "postinstall": "ng build --aot -prod"
   },
   "engines": {
