--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "heroku-postbuild": "ng build — prod",
+    "heroku-postbuild": "ng build --configuration production",
     "postinstall": "ng build --aot -prod"
   },
   "engines": {
