--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "heroku-postbuild": "ng build --configuration production",
-    "postinstall": "ng build --aot --configuration production"
+    "postinstall": "ng build --configuration production"
   },
   "engines": {
     "node": "16.15.0",
